--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,3 @@
-file.reference.meteor-meteor-angular-socially-step_07=.
+file.reference.meteor-meteorTutorial=.
 files.encoding=UTF-8
-site.root.folder=${file.reference.meteor-meteor-angular-socially-step_07}
+site.root.folder=${file.reference.meteor-meteorTutorial}
